repositioning and renaming truffle folder

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -1,4 +1,4 @@
 <body>
   <h1>Welcome to Meteor Truffle!</h1>
-  <p>Open console to see contract instance.</p>
+  <p>Fire up testrpc (or similar) and open your console to see contract instance.</p>
 </body>
