--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -1,4 +1,13 @@
 <body>
-  <h1>Welcome to Meteor Truffle!</h1>
-  <p>Fire up testrpc (or similar) and open your console to see contract instance.</p>
+  <h1>Meteor Truffle - MetaCoin</h1>
+  <h2>Example Truffle Dapp</h2>
+  <h3>You have <span class="black"><span id="balance"></span> META</span></h3>
+
+  <br>
+  <h1>Send</h1>
+  <br><label for="amount">Amount:</label>
+  <br><label for="receiver">To Address:</label>
+  <br><br><button id="send" onclick="sendCoin()">Send MetaCoin</button>
+  <br><br>
+  <span id="status"></span>
 </body>
